--- a/Transfermarkt.Core.Test/App.config
+++ b/Transfermarkt.Core.Test/App.config
@@ -3,8 +3,8 @@
   <appSettings>
     <add key="Language" value="pt" />
     <add key="BaseURL" value="https://www.transfermarkt.pt" />
-    <add key="BaseFolderPath" value="C:\Transfermarkt" />
-    <add key="SettingsFolderPath" value="C:\ws\Transfermarkt\Settings" />
+    <add key="BaseFolderPath" value="..\..\..\" />
+    <add key="SettingsFolderPath" value="..\..\..\Settings\" />
     <add key="SettingsPositionFile" value="position.json" />
     <add key="SettingsNationalityFile" value="nationality.json" />
     <add key="SettingsFootFile" value="foot.json" />
@@ -19,7 +19,7 @@
     <add key="CompetitionUrlFormat" value="/{COMPETITION_NAME}/startseite/wettbewerb/{DIVISION}/plus/?saison_id={SEASON}" />
     <add key="IdentifiersGetterPattern" value="{([a-zA-Z_0-9]*)}" />
     <add key="IdentifiersSetterPattern" value="(?&lt;{ID}&gt;.*)" />
-    <add key="LogPath" value="c:\Transfermarkt\Logs" />
+    <add key="LogPath" value="..\..\..\Logs\" />
     <add key="MinimumLoggingLevel" value="2" />
   </appSettings>
 </configuration>
