--- a/Page.Scraper.Exporter/Page.Scraper.Exporter.csproj
+++ b/Page.Scraper.Exporter/Page.Scraper.Exporter.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0E517DC1-76E0-43AD-B593-4BF2FAA344AC}</ProjectGuid>
+    <ProjectGuid>{51E667D6-B895-494F-95DA-EB080DD8EEBB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Page.Parser</RootNamespace>
-    <AssemblyName>Page.Parser</AssemblyName>
+    <RootNamespace>Page.Scraper.Exporter</RootNamespace>
+    <AssemblyName>Page.Scraper.Exporter</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,7 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,28 +45,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Connection.cs" />
-    <Compile Include="Domain.cs" />
-    <Compile Include="Element.cs" />
-    <Compile Include="ElementParser.cs" />
-    <Compile Include="IConnection.cs" />
-    <Compile Include="IConverter.cs" />
-    <Compile Include="IDomain.cs" />
-    <Compile Include="IElement.cs" />
-    <Compile Include="IElementParser.cs" />
-    <Compile Include="IPage.cs" />
-    <Compile Include="ISection.cs" />
-    <Compile Include="IValue.cs" />
-    <Compile Include="Link.cs" />
-    <Compile Include="Page.cs" />
+    <Compile Include="JSONExporter\JsonExporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sections\ChildsSamePageSection.cs" />
-    <Compile Include="Sections\ChildsSection.cs" />
-    <Compile Include="Sections\ElementsSection.cs" />
-    <Compile Include="Values\DecimalValue.cs" />
-    <Compile Include="Values\DatetimeValue.cs" />
-    <Compile Include="Values\IntValue.cs" />
-    <Compile Include="Values\StringValue.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Page.Scraper\Page.Scraper.csproj">
+      <Project>{0e517dc1-76e0-43ad-b593-4bf2faa344ac}</Project>
+      <Name>Page.Scraper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Transfermarkt.Core\Transfermarkt.Core.csproj">
+      <Project>{624D334A-662C-4B28-BB3F-C73E61850C93}</Project>
+      <Name>Transfermarkt.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
