JsonExporter relocated and promoted independent in concern to Transfermarkt.Core.

--- a/Transfermarkt.Core.Test/App.config
+++ b/Transfermarkt.Core.Test/App.config
@@ -5,6 +5,8 @@
     <add key="BaseURL" value="https://www.transfermarkt.pt" />
     <add key="BaseFolderPath" value="..\..\..\" />
     <add key="SettingsFolderPath" value="..\..\..\Settings\" />
+    <add key="OutputFolderPath" value="..\..\..\Output\" />
+    <add key="LogPath" value="..\..\..\Output\Logs\" />
     <add key="SettingsPositionFile" value="position.json" />
     <add key="SettingsNationalityFile" value="nationality.json" />
     <add key="SettingsFootFile" value="foot.json" />
@@ -19,7 +21,6 @@
     <add key="CompetitionUrlFormat" value="/{COMPETITION_NAME}/startseite/wettbewerb/{DIVISION}/plus/?saison_id={SEASON}" />
     <add key="IdentifiersGetterPattern" value="{([a-zA-Z_0-9]*)}" />
     <add key="IdentifiersSetterPattern" value="(?&lt;{ID}&gt;.*)" />
-    <add key="LogPath" value="..\..\..\Logs\" />
     <add key="MinimumLoggingLevel" value="2" />
   </appSettings>
 </configuration>
