--- a/LJMB.Logging.Test/LJMB.Logging.Test.csproj
+++ b/LJMB.Logging.Test/LJMB.Logging.Test.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{9CC5CA04-871A-4DB6-A9A7-4D330160F1A4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Transfermarkt.Logging.Test</RootNamespace>
-    <AssemblyName>Transfermarkt.Logging.Test</AssemblyName>
+    <RootNamespace>LJMB.Logging.Test</RootNamespace>
+    <AssemblyName>LJMB.Logging.Test</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -57,9 +57,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Transfermarkt.Logging\Transfermarkt.Logging.csproj">
+    <ProjectReference Include="..\LJMB.Logging\LJMB.Logging.csproj">
       <Project>{3166b876-1387-4469-9b20-7be12bcd105e}</Project>
-      <Name>Transfermarkt.Logging</Name>
+      <Name>LJMB.Logging</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
