--- a/LJMB.Logging/LJMB.Logging.csproj
+++ b/LJMB.Logging/LJMB.Logging.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{3166B876-1387-4469-9B20-7BE12BCD105E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Transfermarkt.Logging</RootNamespace>
-    <AssemblyName>Transfermarkt.Logging</AssemblyName>
+    <RootNamespace>LJMB.Logging</RootNamespace>
+    <AssemblyName>LJMB.Logging</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
