--- a/LJMB.Common/LJMB.Common.csproj
+++ b/LJMB.Common/LJMB.Common.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BA0BBD16-D971-4936-8697-96DB70BA8E52}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Transfermarkt.Console</RootNamespace>
-    <AssemblyName>Transfermarkt.Console</AssemblyName>
+    <ProjectGuid>{417AFA74-AD2E-4F9F-8EB1-E177EABA4CE5}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>LJMB.Common</RootNamespace>
+    <AssemblyName>LJMB.Common</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,9 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HtmlAgilityPack, Version=1.11.18.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
-      <HintPath>..\packages\HtmlAgilityPack.1.11.18\lib\Net45\HtmlAgilityPack.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -47,36 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Command.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="ConfigManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CommandUtil.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\LJMB.Common\LJMB.Common.csproj">
-      <Project>{417AFA74-AD2E-4F9F-8EB1-E177EABA4CE5}</Project>
-      <Name>LJMB.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Page.Scraper\Page.Scraper.csproj">
-      <Project>{0E517DC1-76E0-43AD-B593-4BF2FAA344AC}</Project>
-      <Name>Page.Scraper</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Transfermarkt.Core\Transfermarkt.Core.csproj">
-      <Project>{624d334a-662c-4b28-bb3f-c73e61850c93}</Project>
-      <Name>Transfermarkt.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Page.Scraper.Exporter\Page.Scraper.Exporter.csproj">
-      <Project>{51E667D6-B895-494F-95DA-EB080DD8EEBB}</Project>
-      <Name>Page.Scraper.Exporter</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LJMB.Logging\LJMB.Logging.csproj">
-      <Project>{3166B876-1387-4469-9B20-7BE12BCD105E}</Project>
-      <Name>LJMB.Logging</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
