Context logic sent to Command project.

--- a/Transfermarkt.Console/Transfermarkt.Console.csproj
+++ b/Transfermarkt.Console/Transfermarkt.Console.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Context.cs" />
+    <Compile Include="TMContext.cs" />
     <Compile Include="Commands\FetchCommand.cs" />
     <Compile Include="Commands\ParseCommand.cs" />
     <Compile Include="Program.cs" />
