--- a/LJMB.Command/LJMB.Command.csproj
+++ b/LJMB.Command/LJMB.Command.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Command.cs" />
     <Compile Include="Commands\ExitCommand.cs" />
+    <Compile Include="Context.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="IContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
