Fetch command renamed to Peek.

--- a/Transfermarkt.Console/Transfermarkt.Console.csproj
+++ b/Transfermarkt.Console/Transfermarkt.Console.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Options\IndexesOption.cs" />
     <Compile Include="Options\YearOption.cs" />
     <Compile Include="TMContext.cs" />
-    <Compile Include="Commands\FetchCommand.cs" />
+    <Compile Include="Commands\PeekCommand.cs" />
     <Compile Include="Commands\ParseCommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
