--- a/Transfermarkt.Core.Test/Transfermarkt.Core.Test.csproj
+++ b/Transfermarkt.Core.Test/Transfermarkt.Core.Test.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsTest.cs" />
     <Compile Include="TestingConfigs.cs" />
+    <Compile Include="TMServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
