--- a/LJMB.Command/LJMB.Command.csproj
+++ b/LJMB.Command/LJMB.Command.csproj
@@ -50,6 +50,7 @@
     <Compile Include="IContext.cs" />
     <Compile Include="IOption.cs" />
     <Compile Include="Option.cs" />
+    <Compile Include="CommandProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
