Context command logic renamed to Processor.

--- a/Transfermarkt.Console/Transfermarkt.Console.csproj
+++ b/Transfermarkt.Console/Transfermarkt.Console.csproj
@@ -51,7 +51,7 @@
     <Compile Include="CommandUtils.cs" />
     <Compile Include="Options\IndexesOption.cs" />
     <Compile Include="Options\YearOption.cs" />
-    <Compile Include="TMContext.cs" />
+    <Compile Include="TMCommandProcessor.cs" />
     <Compile Include="Commands\PeekCommand.cs" />
     <Compile Include="Commands\ParseCommand.cs" />
     <Compile Include="Program.cs" />
