--- a/Transfermarkt.Console/Transfermarkt.Console.csproj
+++ b/Transfermarkt.Console/Transfermarkt.Console.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Arguments\IndexesArguments.cs" />
     <Compile Include="CommandUtils.cs" />
+    <Compile Include="Options\ExportOption.cs" />
     <Compile Include="Options\IndexesOption.cs" />
     <Compile Include="Options\YearOption.cs" />
     <Compile Include="TMCommandProcessor.cs" />
