--- a/LJMB.Command/LJMB.Command.csproj
+++ b/LJMB.Command/LJMB.Command.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Command.cs" />
     <Compile Include="Commands\ExitCommand.cs" />
+    <Compile Include="Commands\ListCommand.cs" />
     <Compile Include="Processor.cs" />
     <Compile Include="ErrorMsg.cs" />
     <Compile Include="IArgument.cs" />
