--- a/LJMB.Command.Test/LJMB.Command.Test.csproj
+++ b/LJMB.Command.Test/LJMB.Command.Test.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProcessorTest.cs" />
     <Compile Include="CommandTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
