--- a/LJMB.Command.Test/LJMB.Command.Test.csproj
+++ b/LJMB.Command.Test/LJMB.Command.Test.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ProcessorTest.cs" />
+    <Compile Include="OptionTest.cs" />
     <Compile Include="CommandTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
